[gd_scene load_steps=4 format=3 uid="uid://2jxf3j486037"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_fom33"]
[ext_resource type="Texture2D" uid="uid://cg3uds6ox155b" path="res://Assets/Player/heart.png" id="2_bwvr2"]
[ext_resource type="Texture2D" uid="uid://bk3mi775umjlm" path="res://Assets/Fruits/Apple.png" id="3_3suoy"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fom33")

[node name="Vidas2" type="Node" parent="."]

[node name="Life1" type="Sprite2D" parent="Vidas2"]
texture_filter = 1
position = Vector2(14, 14)
texture = ExtResource("2_bwvr2")

[node name="Life2" type="Sprite2D" parent="Vidas2"]
texture_filter = 1
position = Vector2(34, 14)
texture = ExtResource("2_bwvr2")

[node name="Life3" type="Sprite2D" parent="Vidas2"]
texture_filter = 1
position = Vector2(54, 14)
texture = ExtResource("2_bwvr2")

[node name="Life4" type="Sprite2D" parent="Vidas2"]
texture_filter = 1
position = Vector2(74, 14)
texture = ExtResource("2_bwvr2")

[node name="Life5" type="Sprite2D" parent="Vidas2"]
texture_filter = 1
position = Vector2(94, 14)
texture = ExtResource("2_bwvr2")

[node name="Itens coletados" type="Node" parent="."]

[node name="Apple" type="Sprite2D" parent="Itens coletados"]
texture_filter = 1
position = Vector2(183, 15)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_3suoy")
hframes = 17

[node name="qtdApple" type="Label" parent="Itens coletados"]
offset_left = 198.0
offset_top = 2.0
offset_right = 238.0
offset_bottom = 25.0
